create github pages

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/f">easy website maker</a></section><section class="mbr-section content4 cid-qRxeJfCRnk" id="content4-1">
+<section class="engine"><a href="https://mobirise.me/g">how to build a website</a></section><section class="mbr-section content4 cid-qRxeJfCRnk" id="content4-1">
 
     
 
@@ -73,7 +73,7 @@
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
-                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong>Recruitment and Job Assistance</strong><br><strong><br></strong>Recruitment service is used to describe the process by which placement agencies and recruiters help the job seekers find suitable jobs.<br>The Recruitment process involves sourcing, interviewing, reference checking, matching candidates with clients (both in terms of the work culture and the specific requirements of the position, and finally selecting suitable candidates for a job vacancy.<br>Recruitment agencies like us can save businesses considerable time and money and ensure that job hunters find the right position as quickly as possible.<br></p>
+                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong>Recruitment and Job Assistance</strong><br><strong><br></strong>Recruitment service is used to describe the process by which placement agencies and recruiters help the job seekers find suitable jobs.<br>The Recruitment process involves sourcing, interviewing, reference checking, matching candidates with clients both in terms of the work culture and the specific requirements of the position, and finally selecting suitable candidates for a job vacancy.<br>Recruitment agencies like us can save businesses considerable time and money and ensure that job hunters find the right position as quickly as possible.<br></p>
                         </div>
                     </div>
                 </div>
@@ -255,7 +255,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2jU/WtKSAu3urBol90BKemJOSv6Y+vQ81RtPISACfjcSEpc0bK5denAvv6+Qlqb9vELiXyfi056kJ3+G4KZgfA/Ig7ZmmibA/RdxK8PVaWQXutb19C5RM8gNR3/MnWe3" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7XiUNk5WXpMUAIm2NIaeL7t6O99bNsgbucksIf7mCw8hnE9xTG2RF2+KJ7G7QlkOyXtqElHTZgmL7Yj4eVZIRzEUN8w0HB1tQ72pqIroNrZLRyqJBRuBOm62WZR9jvBY" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
